Resolve problem payment paypal on Firefox > v15

--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -152,7 +152,7 @@
     right: 20px;
     top: 74px;
     z-index: 5;
-    width: 170px;
+    width: 180px;
     height: 80px;
     color: #fff;
     text-decoration: none;
